--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,18 +7,16 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="183dp"
+        android:layout_centerVertical="true"
         android:text="Username and password" />
-
+
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/button2"
         android:layout_alignLeft="@+id/button2"
-        android:gravity="center"
         android:layout_alignRight="@+id/button2"
         android:text="Google" />
 
