Renamed key elements of the app.

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
 		<TableLayout
 				android:id="@+id/TableLayout1"
 				android:layout_width="250dp"
-				android:layout_height="match_parent"
+				android:layout_height="wrap_content"
 				android:layout_gravity="center_horizontal" >
 
 				<TextView
