--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -6,13 +6,13 @@
 		>
 
 		<TableLayout
-				android:id="@+id/TableLayout1"
+				android:id="@+id/tableLayout"
 				android:layout_width="250dp"
 				android:layout_height="wrap_content"
 				android:layout_gravity="center_horizontal" >
 
 				<TextView
-						android:id="@+id/textView1"
+						android:id="@+id/usernameLabel"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="20dp"
@@ -20,7 +20,7 @@
 						android:textAppearance="?android:attr/textAppearanceMedium" />
 
 				<EditText
-						android:id="@+id/editText1"
+						android:id="@+id/usernameBox"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:ems="10"
@@ -29,7 +29,7 @@
 				</EditText>
 
 				<TextView
-						android:id="@+id/textView2"
+						android:id="@+id/passwordLabel"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="10dp"
@@ -37,7 +37,7 @@
 						android:textAppearance="?android:attr/textAppearanceMedium" />
 
 				<EditText
-						android:id="@+id/editText2"
+						android:id="@+id/passwordBox"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:inputType="textPassword" />
@@ -50,13 +50,13 @@
 						android:text="@string/login" />
 
 				<Button
-						android:id="@+id/button2"
+						android:id="@+id/signUpButton"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:text="@string/sign_up" />
 
 				<Button
-						android:id="@+id/button3"
+						android:id="@+id/forgotPasswordButton"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="5dp"
