--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,10 +1,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:tools="http://schemas.android.com/tools"
 		android:id="@+id/scrollView"
-								android:layout_width="fill_parent"
-									android:layout_height="wrap_content"
-		>
-
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
+		
 		<TableLayout
 				android:id="@+id/tableLayout"
 				android:layout_width="250dp"
