--- a/res/layout/group_row.xml
+++ b/res/layout/group_row.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView android:id="@+id/groupname"
 		 xmlns:android="http://schemas.android.com/apk/res/android"
-         android:textSize="16px"
+         android:textSize="25dp"
          android:textStyle="bold"
-		 android:paddingLeft="50px"
+		 android:paddingLeft="35dp"
          android:layout_width="fill_parent"
-         android:layout_height="wrap_content"/>
+         android:layout_height="wrap_content"
+         android:text="BUF3235U" />
