--- a/res/layout/group_row.xml
+++ b/res/layout/group_row.xml
@@ -2,8 +2,9 @@
 <TextView android:id="@+id/groupname"
 		 xmlns:android="http://schemas.android.com/apk/res/android"
          android:textSize="25dp"
-         android:textStyle="bold"
+         android:textStyle="normal"
 		 android:paddingLeft="35dp"
+		 android:paddingTop="5dp"
+		 android:paddingBottom="5dp"
          android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:text="BUF3235U" />
+         android:layout_height="wrap_content"/>
