--- a/res/layout/computer_child_row.xml
+++ b/res/layout/computer_child_row.xml
@@ -1,19 +1,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+		android:orientation="vertical"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
 
-    <TextView android:id="@+id/title"
-        android:paddingLeft="30dp"
-         android:textSize="20dp"
-         android:textStyle="bold"
-         android:layout_width="200dp"
-         android:layout_height="wrap_content"/>
+		<TextView android:id="@+id/title"
+				android:paddingLeft="30dp"
+				android:textSize="20dp"
+				android:textStyle="bold"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"/>
 
-    <TextView android:id="@+id/value"
-         android:paddingLeft="30dp"
-         android:textSize="20dp"
-         android:textStyle="normal"
-         android:layout_width="200dp"
-         android:layout_height="wrap_content"/>
+		<TextView android:id="@+id/value"
+				android:paddingLeft="30dp"
+				android:textSize="20dp"
+				android:textStyle="normal"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"/>
 </LinearLayout>
