--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -23,7 +23,8 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:ems="10"
-						android:inputType="textNoSuggestions" >
+						android:inputType="textNoSuggestions"
+						android:text="hansen">
 						<requestFocus />
 				</EditText>
 
@@ -39,7 +40,8 @@
 						android:id="@+id/passwordBox"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:inputType="textPassword" />
+						android:inputType="textPassword"
+						android:text="test1234"/>
 
 				<Button
 						android:id="@+id/loginButton"
