--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,9 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
-    <item android:id="@+id/saveMenu"
-          android:icon="@drawable/action_search"
-          android:showAsAction="ifRoom" />
+		<item android:id="@+id/menu_settings"
+				android:title="@string/menu_settings"
+				android:orderInCategory="100"
+				android:showAsAction="never" />
+		<item android:id="@+id/menu_search"
+					android:icon="@drawable/action_search"
+					android:showAsAction="ifRoom" />
+		<item android:id="@+id/menu_refresh"
+			android:icon="@drawable/navigation_refresh"
+			android:showAsAction="ifRoom" />
+
 </menu>
