--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -7,6 +7,7 @@
 					android:icon="@drawable/action_search"
 					android:showAsAction="ifRoom" />
 		<item android:id="@+id/menu_refresh"
+				android:title="Refresh"
 			android:icon="@drawable/navigation_refresh"
 			android:showAsAction="ifRoom" />
 
