--- a/res/layout/activity_computer_list.xml
+++ b/res/layout/activity_computer_list.xml
@@ -1,9 +1,11 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:name="dk.illution.computer.info.ComputerListFragment"
     android:id="@+id/computer_list"
+    android:name="dk.illution.computer.info.ComputerListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    tools:context=".ComputerListActivity" />
+    tools:context=".ComputerListActivity"
+    tools:layout="@layout/simple_list_item_1" />
+
