Got some strange merge conflicts...

--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -3,6 +3,10 @@
 				android:title="@string/menu_settings"
 				android:orderInCategory="100"
 				android:showAsAction="never" />
+		<item android:id="@+id/menu_logout"
+				android:title="@string/menu_logout"
+				android:orderInCategory="100"
+				android:showAsAction="never" />
 		<item android:id="@+id/menu_search"
 					android:icon="@drawable/action_search"
 					android:showAsAction="ifRoom" />
