--- a/res/layout/activity_login_select.xml
+++ b/res/layout/activity_login_select.xml
@@ -1,11 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" 
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center">
-				
+		android:orientation="vertical"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:gravity="center">
+
 		<TextView
-			android:id="@+id/chooseLoginMethodLabel"
+			android:id="@+id/choose_login_method_label"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:gravity="center"
@@ -13,15 +13,15 @@
 			android:textAppearance="?android:attr/textAppearanceMedium" />
 
 		<Button
-			android:id="@+id/googleButton"
+			android:id="@+id/google_button"
 			android:layout_width="250dp"
 			android:layout_height="wrap_content"
 			android:text="@string/google" />
 
 		<Button
-		    android:id="@+id/usernameAndPasswordButton"
-		    android:layout_width="250dp"
-		    android:layout_height="wrap_content"
-		    android:text="@string/username_and_password" />
+			android:id="@+id/username_and_password_button"
+			android:layout_width="250dp"
+			android:layout_height="wrap_content"
+			android:text="@string/username_and_password" />
 
 </LinearLayout>
