--- a/res/layout/fragment_computer_detail.xml
+++ b/res/layout/fragment_computer_detail.xml
@@ -1,8 +1,16 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="?android:attr/textAppearanceLarge"
-    android:id="@+id/computer_detail"
+<GridLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".ComputerDetailFragment" />
+    android:layout_height="wrap_content"
+    android:columnCount="4"
+    android:rowCount="4" >
+ 
+    <TextView
+        android:text="1,1" />
+ 	<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+	<solid android:color="#ffffff"/>
+	<size android:height="60dip" />
+	</shape>
+ 
+</GridLayout>
