--- a/res/layout/fragment_computer_detail.xml
+++ b/res/layout/fragment_computer_detail.xml
@@ -26,7 +26,8 @@
 						<TextView
 								android:layout_width="wrap_content"
 								android:layout_height="wrap_content"
-								android:text="Item 1" />
+								android:text="Item 1"
+								android:id="@+id/test" />
 
 						<TextView
 								android:layout_width="wrap_content"
