--- a/res/layout/fragment_computer_detail.xml
+++ b/res/layout/fragment_computer_detail.xml
@@ -1,65 +1,59 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:accordion="http://schemas.android.com/apk/res-auto/com.sentaca.android.accordion"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:background="@android:color/white"
-		android:orientation="vertical" >
+		android:background="@android:color/white" >
 
-		<ScrollView
+		<dk.illution.computer.info.widget.AccordionView
+				android:id="@+id/accordion_view"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent" >
+				android:layout_height="fill_parent"
+				accordion:header_layout_fold_button_id="@id/foldButton"
+				accordion:header_layout_id="@layout/accordion_header"
+				accordion:header_layout_label_id="@id/foldText"
+				accordion:section_bottom="@layout/accordion_footer"
+				accordion:section_container="@layout/accordion_section"
+				accordion:section_container_parent="@id/section_content"
+				accordion:section_headers="@array/computer_sections"
+				android:background="#fff5f5f5"
+				android:orientation="vertical" >
 
-				<dk.illution.computer.info.widget.AccordionView
-						android:id="@+id/accordion_view"
+					<LinearLayout
+						android:id="@+id/section_computer_general"
 						android:layout_width="fill_parent"
-						android:layout_height="fill_parent"
-						accordion:header_layout_fold_button_id="@id/foldButton"
-						accordion:header_layout_id="@layout/accordion_header"
-						accordion:header_layout_label_id="@id/foldText"
-						accordion:section_bottom="@layout/accordion_footer"
-						accordion:section_container="@layout/accordion_section"
-						accordion:section_container_parent="@id/section_content"
-						accordion:section_headers="@array/computer_sections"
-						android:background="#fff5f5f5"
+						android:layout_height="wrap_content"
 						android:orientation="vertical" >
+				<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="Item 1"
+						android:id="@+id/test" />
+				</LinearLayout>
 
-				    	<LinearLayout
-								android:id="@+id/section_computer_general"
-								android:layout_width="fill_parent"
-								android:layout_height="wrap_content"
-								android:orientation="vertical" >
-						<TextView
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
-								android:text="Item 1"
-								android:id="@+id/test" />
-						</LinearLayout>
+					<LinearLayout
+						android:id="@+id/section_computer_processor"
+						android:layout_width="fill_parent"
+						android:layout_height="wrap_content"
+						android:orientation="vertical" >
+				</LinearLayout>
 
-				    	<LinearLayout
-								android:id="@+id/section_computer_processor"
-								android:layout_width="fill_parent"
-								android:layout_height="wrap_content"
-								android:orientation="vertical" >
-						</LinearLayout>
+				<LinearLayout
+					android:id="@+id/section_computer_memory"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:orientation="vertical" >
 
-						<LinearLayout
-							android:id="@+id/section_computer_memory"
-							android:layout_width="fill_parent"
-							android:layout_height="wrap_content"
-							android:orientation="vertical" >
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="Item 2" />
 
-							<TextView
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
-								android:text="Item 2" />
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="Item 3" />
+				</LinearLayout>
 
-							<TextView
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
-								android:text="Item 3" />
-						</LinearLayout>
-
-				</dk.illution.computer.info.widget.AccordionView>
-		</ScrollView>
-
-</LinearLayout>
+		</dk.illution.computer.info.widget.AccordionView>
+</ScrollView>
