More work on login.

--- a/res/layout/fragment_computer_detail.xml
+++ b/res/layout/fragment_computer_detail.xml
@@ -8,7 +8,7 @@
 		<dk.illution.computer.info.widget.AccordionView
 				android:id="@+id/accordion_view"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
+				android:layout_height="wrap_content"
 				accordion:header_layout_fold_button_id="@id/foldButton"
 				accordion:header_layout_id="@layout/accordion_header"
 				accordion:header_layout_label_id="@id/foldText"
