--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -8,11 +8,14 @@
 				android:orderInCategory="100"
 				android:showAsAction="never" />
 		<item android:id="@+id/menu_search"
-					android:icon="@drawable/action_search"
-					android:showAsAction="ifRoom" />
+				android:icon="@drawable/action_search"
+				android:showAsAction="ifRoom" />
 		<item android:id="@+id/menu_refresh"
 				android:title="Refresh"
-			android:icon="@drawable/navigation_refresh"
-			android:showAsAction="ifRoom" />
-
+				android:icon="@drawable/navigation_refresh"
+				android:showAsAction="ifRoom" />
+		<item android:id="@+id/menu_about"
+				android:title="About"
+				android:orderInCategory="100"
+				android:showAsAction="never" />
 </menu>
