--- a/res/menu/activity_login.xml
+++ b/res/menu/activity_login.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-		<item android:id="@+id/menu_settings"
-				android:title="@string/menu_settings"
+		<item android:id="@+id/menu_preferences"
+				android:title="@string/preferences"
 				android:orderInCategory="100"
 				android:showAsAction="never" />
 		<item android:id="@+id/menu_about"
-				android:title="About"
+				android:title="@string/about"
 				android:orderInCategory="100"
 				android:showAsAction="never" />
 </menu>
