--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,21 +1,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-		<item android:id="@+id/menu_settings"
-				android:title="@string/menu_settings"
+		<item android:id="@+id/menu_preferences"
+				android:title="@string/preferences"
 				android:orderInCategory="100"
 				android:showAsAction="never" />
 		<item android:id="@+id/menu_logout"
-				android:title="@string/menu_logout"
+				android:title="@string/logout"
 				android:orderInCategory="100"
 				android:showAsAction="never" />
 		<item android:id="@+id/menu_search"
 				android:icon="@drawable/action_search"
 				android:showAsAction="ifRoom" />
 		<item android:id="@+id/menu_refresh"
-				android:title="Refresh"
+				android:title="@string/refresh"
 				android:icon="@drawable/navigation_refresh"
 				android:showAsAction="ifRoom" />
 		<item android:id="@+id/menu_about"
-				android:title="About"
+				android:title="@string/about"
 				android:orderInCategory="100"
 				android:showAsAction="never" />
 </menu>
