--- a/res/layout/fragment_computer_detail.xml
+++ b/res/layout/fragment_computer_detail.xml
@@ -46,14 +46,31 @@
 					android:orientation="vertical" >
 
 					<TextView
+						android:id="@+id/computer_memory_total_label"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="Item 2" />
+						android:text="Total memory:"
+						android:layout_marginLeft="1dp"
+						android:textAppearance="?android:attr/textAppearanceSmall"
+						android:textStyle="bold" />
 
 					<TextView
+						android:id="@+id/computer_memory_total"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="Item 3" />
+						android:layout_marginLeft="4dp"
+						android:textAppearance="?android:attr/textAppearanceSmall"
+						android:tag="value"
+						android:text="{{total_physical_memory}} MB"/>
+					
+					<TextView
+						android:id="@+id/computer_memory_slots_label"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="Memory slots:"
+						android:layout_marginLeft="1dp"
+						android:textAppearance="?android:attr/textAppearanceSmall"
+						android:textStyle="bold" />
 				</LinearLayout>
 
 		</dk.illution.computer.info.widget.AccordionView>
