--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,5 +6,10 @@
     <color name="header_border_shadow">#ffffff</color>
     
     <color name="section_color">#ffffff</color>
+    <color name="golden">#f2a400</color>
+    <color name="red">#e00707</color>
+    <color name="green">#4ac925</color>
+    <color name="skyblue">#00d5f2</color>
+    <color name="holoblue">#ff33b6ea</color>
     
 </resources>
