--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -8,6 +8,7 @@
           android:orderInCategory="100"
           android:showAsAction="never"/>
     <item android:id="@+id/menu_search"
+          android:title="@string/search"
           android:icon="@drawable/action_search"
           android:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_refresh"
