--- a/res/layout/card_picture.xml
+++ b/res/layout/card_picture.xml
@@ -49,8 +49,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:ellipsize="end"
-                android:maxLines="7"
-                android:text="@string/ipsum"/>
+                android:maxLines="7"/>
     </LinearLayout>
 
 </LinearLayout>
