--- a/res/layout/card_ex.xml
+++ b/res/layout/card_ex.xml
@@ -41,8 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:ellipsize="end"
-                android:maxLines="4"
-                android:text="@string/ipsum"/>
+                android:maxLines="4"/>
     </LinearLayout>
 
 </LinearLayout>
